glpi/ingress/glpi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glpi-ingress
  labels:
   type: glpi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "*.papa.r.killercoda.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glpi
            port:
              number: 80
